Reduce memory usage